Fix several collapse and full-width bugs

--- a/css/default.css
+++ b/css/default.css
@@ -68,7 +68,6 @@
 .collapse {
     min-height: 5rem;
     position: relative;
-    overflow: hidden;
     padding: 0 0 2rem 0;
     box-sizing: border-box;
     margin: 1em 0;
@@ -77,16 +76,9 @@
     position: relative;
     z-index: 13;
 }
-.collapse:not(.expanded) > .disclosure-button ~ :not(.abstract):not(.abstract-collapse) {
+.collapse:not(.expanded) > .collapse-content-wrapper {
     max-height: 0;
-    min-height: unset;
     overflow: hidden;
-    padding: 0;
-    margin: 0;
-    border: none;
-}
-.collapse.expanded {
-    overflow: visible;
 }
 
 .collapse::before {
@@ -113,11 +105,6 @@
 }
 .collapse .abstract {
     margin-left: calc(-0.5em - 2px);
-}
-.collapse:not(.expanded) > .abstract,
-.collapse:not(.expanded) > .abstract-collapse {
-    pointer-events: none;
-    position: relative;
 }
 .collapse:not(.expanded) > .abstract blockquote {
     margin: 0;
@@ -279,13 +266,6 @@ section.collapse > :first-child > a {
     position: relative;
 }
 
-section.collapse .abstract-collapse:not(.abstract) {
-    margin: 1.5em 0 0.25em 0;
-}
-section.collapse.expanded > .abstract-collapse:not(.abstract) {
-    margin-bottom: 0;
-}
-
 /**********************************/
 /*  Collapsible non-section blocks.
  */
@@ -295,7 +275,7 @@ section.collapse.expanded > .abstract-collapse:not(.abstract) {
 :not(section).collapse:not(.expanded) {
     padding: 0 0 0 1em;
 }
-:not(section).collapse:not(.expanded) > .disclosure-button ~ :not(.abstract):not(.abstract-collapse) {
+:not(section).collapse:not(.expanded) > .collapse-content-wrapper {
     max-height: 5rem;
 }
 
@@ -357,35 +337,40 @@ section.collapse.expanded > .abstract-collapse:not(.abstract) {
     clear: both;
 }
 
-.sourceCode .collapse,
 .sourceCode.collapse {
-    margin: 1.75em auto;
+    margin: 1.75em 0;
 }
-.sourceCode .collapse > pre,
-.sourceCode.collapse > pre {
+.sourceCode.collapse .collapse-content-wrapper pre {
     margin: 0;
 }
-.collapse:not(.expanded) > .disclosure-button ~ pre:not(.abstract-collapse) {
-    border: 1px solid var(--GW-pre-element-border-color);
+.sourceCode.collapse:not(.expanded) {
+    padding: 0;
+}
+.sourceCode.collapse.expanded {
+    margin-left: -1em;
+}
+.sourceCode.collapse:not(.expanded) .collapse-content-wrapper pre {
+    max-height: 5rem;
     box-sizing: border-box;
+    overflow: hidden;
 }
-.sourceCode .collapse:not(.expanded) > .disclosure-button,
+
+.sourceCode.collapse:not(.expanded) .collapse-content-wrapper.width-full {
+    max-width: 100%;
+    margin: 0 !important;
+}
+
 .sourceCode.collapse:not(.expanded) > .disclosure-button {
-    width: calc(100% - (1em + 2px));
-}
-.sourceCode :not(section).collapse:not(.expanded) > .disclosure-button,
-.sourceCode:not(section).collapse:not(.expanded) > .disclosure-button {
     --button-color: var(--GW-collapse-disclosure-button-color-30-percent-transparent);
 }
-.sourceCode :not(section).collapse:not(.expanded) > .disclosure-button:hover,
-.sourceCode:not(section).collapse:not(.expanded) > .disclosure-button:hover {
+.sourceCode.collapse:not(.expanded) > .disclosure-button:hover {
     --button-color: var(--GW-collapse-disclosure-button-hover-color-30-percent-transparent);
 }
-.sourceCode:not(section).collapse:not(.expanded) > .disclosure-button::before {
+.sourceCode.collapse:not(.expanded) > .disclosure-button::before {
     top: 1px;
     right: 1px;
 }
-.sourceCode:not(section).collapse:not(.expanded) > .disclosure-button::after {
+.sourceCode.collapse:not(.expanded) > .disclosure-button::after {
     bottom: 1px;
 }
 
@@ -393,20 +378,14 @@ section.collapse.expanded > .abstract-collapse:not(.abstract) {
 /*  Collapsible tables.
  */
 
-.table-wrapper > .collapse {
-    margin: 0;
-    min-height: unset;
-}
-.table-wrapper > .collapse:not(.expanded) {
-    max-height: calc(4.75rem + 1px);
-    margin-left: 1em;
+.table-wrapper.collapse:not(.expanded) {
+    overflow: hidden;
+    margin-left:  0;
     padding: 0;
 }
-.table-wrapper > .collapse:not(.expanded) > .disclosure-button::before {
+
+.table-wrapper.collapse:not(.expanded) > .disclosure-button::before {
     top: 2px;
-}
-.table-wrapper > .collapse:not(.expanded) > .disclosure-button::after {
-    bottom: 1px;
 }
 
 /****************************/
@@ -1986,11 +1965,8 @@ table {
 /*= Full-width tables =*/
 /*=-------------------=*/
 
-.table-wrapper.width-full .full-width-table-inner-wrapper {
+.table.width-full table {
     background-color: var(--GW-table-full-width-background-color);
-}
-blockquote .table-wrapper.width-full {
-    background-color: transparent;
 }
 
 /*=-------------=*/
@@ -2002,6 +1978,7 @@ table caption {
     font-style: italic;
     font-size: 1.25em;
     border-top: 2px solid var(--GW-table-caption-border-color);
+    background-color: inherit;
 }
 
 table th,
@@ -2031,10 +2008,10 @@ table td > code {
 
 /*  Horizontal scroll bar styles (for WebKit/Chromium).
     */
-.table-wrapper::-webkit-scrollbar {
+.table-scroll-wrapper::-webkit-scrollbar {
     height: 16px;
 }
-.table-wrapper::-webkit-scrollbar-thumb {
+.table-scroll-wrapper::-webkit-scrollbar-thumb {
     background-image: url('data:image/gif;base64,R0lGODlhBAAEAPAAMXd3d////ywAAAAABAAEAAACBgQShqgJBQA7');
     background-size: 2px;
     box-shadow:
@@ -2042,21 +2019,21 @@ table td > code {
         0 0   0 1px var(--GW-table-scrollbar-border-color) inset,
         0 2px 0 1px var(--GW-table-scrollbar-border-color) inset;
 }
-.table-wrapper::-webkit-scrollbar-thumb:hover {
+.table-scroll-wrapper::-webkit-scrollbar-thumb:hover {
     background-image: url('data:image/gif;base64,R0lGODlhBAAEAPAAMQAAAP///ywAAAAABAAEAAACBgQShqgJBQA7');
 }
 @media only screen and (max-width: 649px) {
-    .table-wrapper::-webkit-scrollbar {
+    .table-scroll-wrapper::-webkit-scrollbar {
         height: 6px;
     }
 }
 
 /*  Horizontal scroll bar styles (for Firefox).
     */
-.table-wrapper {
+.table-scroll-wrapper {
     scrollbar-color: var(--GW-table-scrollbar-thumb-color) var(--GW-table-scrollbar-track-color);
 }
-.table-wrapper:hover {
+.table-scroll-wrapper:hover {
     scrollbar-color: var(--GW-table-scrollbar-thumb-hover-color) var(--GW-table-scrollbar-track-color);
 }
 
